--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FriendTrip</title>
+    <title>Friend-Trip(交友旅遊網站)</title>
     <link rel="stylesheet" href="style.css" />
     <!-- 引入Bootstrap CSS -->
     <link
