固定行程網址連結更新

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           <ul>
             <li>
               <a
-href="file:///C:/Users/%E6%9B%B9%E7%A5%90%E5%98%89/OneDrive/%E6%A1%8C%E9%9D%A2/%E6%9B%B9%E7%A5%90%E5%98%89%E4%BD%9C%E5%93%81%E9%9B%86/2.%E4%BA%A4%E5%8F%8B%E6%97%85%E9%81%8A%E7%B6%B2%E7%AB%99(Friend-Trip)/Friend-Trip(%E4%BA%A4%E5%8F%8B%E6%97%85%E9%81%8A%E7%B6%B2%E7%AB%99).html"
+href="https://tasoyujia.github.io/Friend-Trip-/%E5%9B%BA%E5%AE%9A%E8%A1%8C%E7%A8%8B"
                 >固定行程</a
               ></li>
             <li><a href="#">自定行程</a></li>
